--- a/AnnuaireEntreprise/AnnuaireEntreprise.csproj
+++ b/AnnuaireEntreprise/AnnuaireEntreprise.csproj
@@ -46,10 +46,17 @@
     <Compile Update="Pages\Salarie\Choice\ChoiceSites.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Pages\Salarie\AddSalarie.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
     <Page Update="Pages\Salarie\Choice\ChoiceSites.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="Pages\Salarie\AddSalarie.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
