--- a/AnnuaireEntreprise.Core.Infrastructure/AnnuaireEntreprise.Core.Infrastructure.csproj
+++ b/AnnuaireEntreprise.Core.Infrastructure/AnnuaireEntreprise.Core.Infrastructure.csproj
@@ -10,10 +10,18 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AnnuaireEntreprise.Core.Models\AnnuaireEntreprise.Core.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Databases\Migrations\" />
   </ItemGroup>
 
 </Project>
