Ajout de l'interface DataLayers

--- a/AnnuaireEntreprise.Core.Infrastructure/AnnuaireEntreprise.Core.Infrastructure.csproj
+++ b/AnnuaireEntreprise.Core.Infrastructure/AnnuaireEntreprise.Core.Infrastructure.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AnnuaireEntreprise.Core.Interfaces\AnnuaireEntreprise.Core.Interfaces.csproj" />
     <ProjectReference Include="..\AnnuaireEntreprise.Core.Models\AnnuaireEntreprise.Core.Models.csproj" />
   </ItemGroup>
 
