--- a/AnnuaireEntreprise.Core.Interfaces/AnnuaireEntreprise.Core.Interfaces.csproj
+++ b/AnnuaireEntreprise.Core.Interfaces/AnnuaireEntreprise.Core.Interfaces.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AnnuaireEntreprise.Core.Models\AnnuaireEntreprise.Core.Models.csproj" />
+  </ItemGroup>
+
 </Project>
