--- a/AnnuaireEntreprise/AnnuaireEntreprise.UI.csproj
+++ b/AnnuaireEntreprise/AnnuaireEntreprise.UI.csproj
@@ -23,9 +23,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AnnuaireEntreprise.Core.Application\AnnuaireEntreprise.Core.Application.csproj" />
     <ProjectReference Include="..\AnnuaireEntreprise.Core.Infrastructure\AnnuaireEntreprise.Core.Infrastructure.csproj" />
   </ItemGroup>
 
