Avancement Injection dépendance multiPAge

--- a/AnnuaireEntreprise.Core.Application/AnnuaireEntreprise.Core.Application.csproj
+++ b/AnnuaireEntreprise.Core.Application/AnnuaireEntreprise.Core.Application.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AnnuaireEntreprise.Core.Infrastructure\AnnuaireEntreprise.Core.Infrastructure.csproj" />
+    <ProjectReference Include="..\AnnuaireEntreprise.Core.Interfaces\AnnuaireEntreprise.Core.Interfaces.csproj" />
+    <ProjectReference Include="..\AnnuaireEntreprise.Core.Models\AnnuaireEntreprise.Core.Models.csproj" />
+  </ItemGroup>
+
 </Project>
